Fixed frosted glass bug on mobile

--- a/Wild7-Theme-November2021/css/components/_header.css
+++ b/Wild7-Theme-November2021/css/components/_header.css
@@ -1,3 +1,7 @@
+/* On load animation */
+
+
+
 /* Frosted glass */
 
 .frosted-glass {
@@ -15,8 +19,8 @@
 .frosted-glass__animation2 {
   /* transform: translateY(-150vw);
   -webkit-transform:translateY(-150vw); */
-  transition: height 1.2s cubic-bezier(.075, .82, .165, 1);
-  -webkit-transition: height 1.2s cubic-bezier(.075, .82, .165, 1);
+  transition: height 1.4s cubic-bezier(.075, .82, .165, 1);
+  -webkit-transition: height 1.4s cubic-bezier(.075, .82, .165, 1);
   height: 355px !important;
 }
 
