--- a/Wild7-Theme-November2021/modules/menu.module/module.css
+++ b/Wild7-Theme-November2021/modules/menu.module/module.css
@@ -170,6 +170,8 @@
 }
 
 .moved-up2 {
-  transform: translateY(-115%);
-  -webkit-transform:translateY(-115%);
+  /* transform: translateY(-115%);
+  -webkit-transform:translateY(-115%); */
+  transform: translateY(-100%);
+  -webkit-transform:translateY(-100%);
 }
